# yolo-process-detection

./: .dockerignore  .gitignore  AUGMENTATION_DISTILLATION.md  CODE_REVIEW.md  Dockerfile  FINAL_OPTIMIZATION_REPORT.md  IMPORTANT_NOTES.md  JETSON_DEPLOYMENT.md  MIGRATION_GUIDE.md  OPTIMIZATION_REPORT.md  PROJECT_OPTIMIZATION_SUMMARY.md  PYTHON_BEST_PRACTICES_OPTIMIZATION.md  README.md  RESEARCH_SUMMARY.md  WEB_GUIDE.md  YOLO26_RESEARCH.md  YOLO_VISION_LEARNING.md  __init__.py  advanced_deployment.py  advanced_examples.py  advanced_training.py  advanced_usage_example.py  analyzer.py  api.py  augmentation.py  config.py  config_validator.py  data_utils.py  detector.py  docker-compose.yml  drift_monitor.py  error_handler.py  evaluator.py  example_usage.py  fix_numpy_opencv.py  hyperparameter_search.py  inference_jetson.py  jetson_deployment.py  jetson_quickstart.sh  jetson_requirements.txt  (+26 more)
.trae/documents/: plan_20260209_081937.md  plan_20260209_090427.md  plan_20260210_070533.md
data/: detection.db
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.vue
frontend/src/components/: NotificationContainer.vue
frontend/src/components/settings/: CameraSettings.vue  DetectionSettings.vue  GeneralSettings.vue  ModelSettings.vue  NotificationSettings.vue  SystemSettings.vue
frontend/src/layouts/: MainLayout.vue
frontend/src/router/: index.js
frontend/src/stores/: app.js  detection.js  settings.js
frontend/src/styles/: main.css
frontend/src/views/: Analysis.vue  Dashboard.vue  History.vue  LiveDetection.vue  Settings.vue
src/yolo_process_detection/: __init__.py  main.py
src/yolo_process_detection/api/: __init__.py  actions.py  cameras.py  dependencies.py  detection.py  routes.py  stream.py  system.py  users.py  websocket.py
src/yolo_process_detection/core/: __init__.py  auth.py  config.py  errors.py  exceptions.py  multimodal_fusion.py  optimization.py  performance.py  utils.py
src/yolo_process_detection/database/: __init__.py  extended_models.py  extended_repositories.py  manager.py  models.py  repositories.py
src/yolo_process_detection/models/: __init__.py  action_recognizer.py  detector.py  material_classifier.py  posture_estimator.py  screw_detector.py  tracker.py
src/yolo_process_detection/schemas/: __init__.py  camera.py  config.py  detection.py  detection_api.py  response.py
src/yolo_process_detection/services/: camera.py  stream.py  websocket.py
templates/: 0721_150426295.html  2626_152664715.html  3734_157102256.html  camera_test.html  dashboard.html  index.html  live_detection.html  settings.html
tests/: conftest.py
tests/test_api/: __init__.py  test_routes.py
tests/test_models/: __init__.py  test_detector.py  test_tracker.py
